fixed missing font in dark mode for footer

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -3,4 +3,5 @@ footer {
   justify-content: center;
   align-items: center;
   margin: 9% 0% 3% 0%;
+  color: var(--primary-color);
 }
